fix seach & update scrollbar style & page style

--- a/src/app/pages/dashboard/dashboard.component.scss
+++ b/src/app/pages/dashboard/dashboard.component.scss
@@ -33,12 +33,29 @@
 
 
 .dashboard-header {
-  width: 100%;
   display: flex;
   justify-content: space-between;
   margin-top: -2rem;
   padding-bottom: 1rem;
   min-height: 10rem;
+  column-gap: 10px;
+  row-gap: 10px;
+}
+
+@media screen and (min-width: 1400px) {
+  .dashboard-header {
+    max-width: 1320px;
+  }
+}
+
+
+@media screen and (max-width: 1400px) {
+  .chain-data {
+    width: calc(66% - 10px) !important;
+  }
+  .token-status {
+    width: 34%;
+  }
 }
 
 .chain-data {
@@ -46,8 +63,7 @@
   box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.08);
   border-radius: 15px;
   padding: 1rem;
-  width: 71.5%;
-  margin-right: 10px;
+  width: calc(75% - 10px);
 }
 
 .chain-data .title {
@@ -128,14 +144,12 @@
 
 .token-status {
   display: flex;
-  width: 26%;
   align-items: center;
   background: #FFFFFF;
   box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.08);
   border-radius: 1rem;
   padding: 1rem 1.5rem;
   column-gap: 1rem;
-  min-width: 356px;
 }
 
 .token-status-icon {
@@ -261,15 +275,6 @@
   background: #FFF;
 }
 
-.miniTd {
-  width: 10%;
-}
-
-#card-table::-webkit-scrollbar-thumb {
-  background: #ddd;
-  border: 2px solid red;
-  border-radius: 5px;
-}
 
 .card-table{
   scrollbar-arrow-color:  rgba(255, 255, 255, 0);
